WIP
- multi-module project with a dedicated demo project to auto-generating doc
- using AsciiDoc with code includes to avoid documentation deterioration
- simplified CodeTransformer: now allows an arbitrary number of Transforms
- Replace now allows for plain or regex replacements